<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">


    <string name="app_name" translatable="false">Life Simulator</string>
    <string name="preference_file_key" translatable="false">com.TestSharedPreferences.PREFERENCE_FILE_KEY</string>

    <string name="buttonNewGame">New Game</string>
    <string name="buttonLoadGame">Load Game</string>
    <string name="buttonSettings">Settings</string>
    <string name="buttonExit">Exit</string>
    <string name="GameTitle" translatable="false">Life Simulator</string>
    <string name="SlotnewGameTitle">Choose a slot</string>

    <string name="slotTitle1">none</string>
    <string name="slotDate1" translatable="false">Slot Date 1 </string>

    <string name="slotTitle2">none</string>
    <string name="slotDate2" translatable="false">Slot Date 2</string>

    <string name="slotTitle3">none</string>
    <string name="slotDate3" translatable="false">Slot Date 3</string>

    <string name="closeDialog">Close</string>
    <string name="confirmDialog">confirm</string>


    <string name="nameInputTitle">Choose your caracter\'s name</string>
    <string name="hintCaracterName">Caracter name</string>


    <string name="prefSlot1" translatable="false">com.android.slot1</string>
    <string name="prefSlot2" translatable="false">com.android.slot2</string>
    <string name="prefSlot3" translatable="false">com.android.slot3</string>
    <string name="buyButton">Buy</string>
    <string name="workButton">Work</string>
    <string name="sleepButton">Sleep</string>
    <string name="logsButton" translatable="false">Logs</string>
    <string name="exitButton">exit</string>
    <string name="sumTitle">Sum</string>
    <string name="balanceTitle">Balance</string>
    <string name="doubleEarn">Watch ad Income x2!</string>
    <string name="incomeTitle">Income</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="workName">Name of work</string>
    <string name="workpay">payement</string>
    <string name="workTime">time of work</string>
    <string name="bankName">Bank</string>
    <string name="startWork">Start working</string>


    <string name="normalSpeed">Normal Speed x1</string>
    <string name="fastSpeed">Fast Speed x2</string>
    <string name="ultraSpeed">Ultra Speed x3</string>
    <string name="superSpeed">Super Speed x4</string>
    <string name="home">Home</string>
    <string name="onWork">On Work ...</string>
    <string name="level">lvl</string>
    <string name="startwork">Start Working</string>
    <string name="xp">xp</string>

    <string name="day">day</string>
    <string name="hour">Hour</string>
    <string name="university">University</string>
    <string name="study">Study</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="credit">Credits</string>
    <string name="score">Score</string>
    <string name="intro">Press start working button to start work or choose a work from work section</string>

    <string name="required">Required</string>
    <string name="deposit">Deposit</string>
    <string name="bankTitleW">How much do you want to withdraw ?</string>
    <string name="withdraw">Withdraw</string>
    <string name="bankTitleD">How much do you want to deposit ?</string>
    <string name="bankOpt">Choose your Option</string>


    <string name="price">price</string>
    <string name="benefit">benefit</string>
    <string name="description">description</string>


    <string name="type">type</string>
    <string name="energyBonus">Energy Bonus</string>
    <string name="healthBonus">Health Bonus</string>

    <string name="health"> Health</string>

    <string name="incomePerDay"> Income per day <xliff:g> : </xliff:g></string>

    <string name="acquiredYes">Acquired <xliff:g> :</xliff:g> Yes</string>
    <string name="acquiredNo">Acquired <xliff:g> :</xliff:g> No</string>
    <string name="pay">pay</string>
    <string name="requiredLevel">Required level</string>
    <string name="hunger">Hunger</string>
    <string name="sleepText">How much do you want to sleep ?</string>
    <string name="intersetText">Nb : interest is up tp 1.00%</string>
    <string name="soonEnough">Soon Enough :)</string>
    <string name="none">none</string>
    <string name="overwrite">Overwrite</string>
    <string name="no">no</string>
    <string name="overwriteTitle">would you like to overwrite this slot ?</string>


    <string name="langTtile">Choose the language</string>
    <string name="adjustSound">Adjust Sound</string>
    <string name="adjustMusic">Adjust Music</string>
    <string name="confirm">Confirm</string>
    <string name="zero_health">Game Over ! :( your health is Zero</string>
    <string name="low_hunger">Hunger is low eat something !</string>
    <string name="low_health">Health is low buy medicine or eat food</string>
    <string name="from_stores">" $ from stores"</string>
    <string name="now_learning">You\'re now learning</string>
    <string name="learning">Learning</string>
    <string name="doing_nothing">You\'re currently doing nothing</string>
    <string name="stopworking">Stop working</string>
    <string name="usebar">use this bar to speed up time</string>
    <string name="time_speed">Time speed</string>
    <string name="Learning">Learning</string>
    <string name="study_section">click here to go to studying section</string>
    <string name="work">Work</string>
    <string name="work_session">click here to go to work session</string>
    <string name="minutes_left">Minutes left</string>
    <string name="have_leveled_up">You have Leveled up !</string>
    <string name="hv_work">you have worked</string>
    <string name="minute">minute</string>
    <string name="hv_made">and you have made</string>
    <string name="you_bought">You bought</string>
    <string name="not_enough_money">Not enough money to buy</string>
    <string name="must_buy">you must buy</string>
    <string name="in">or</string>
    <string name="first">first</string>
    <string name="is_selected">is selected</string>
    <string name="begin_work">Click here to begin working</string>
    <string name="youre_now">You\'re now</string>
    <string name="purchase_item">Would you like to purchase this item ?</string>
    <string name="_for">for</string>
    <string name="you_purchased">you purchased a</string>
    <string name="insufficiant_funds">insufficiant funds to purchase</string>
    <string name="is_now_used">is now used</string>
    <string name="congratulation_u_bought">Congratulation you\'ve bought</string>
    <string name="done_success">" done successfully"</string>
    <string name="purchase_of">Purchase of</string>
    <string name="now_earn_double">you now earn double</string>
    <string name="instant_" >Instant 100$</string>
    <string name="relation_plus_ten">Relation +</string>
    <string name="Home_one">Home 1</string>
    <string name="home_two">Home 2</string>
    <string name="home_one_outside">Show home 1 outside</string>
    <string name="home_two_outside">Show home 2 outside</string>
    <string name="social">Social</string>
    <string name="married_to">Congratulations You\'re now married to</string>
    <string name="gift">gift</string>
    <string name="jewelery">Jewelery</string>
    <string name="chocolate">Chocolate</string>
    <string name="roses">Roses</string>
    <string name="found_partner">Congratulation you have found a partner !</string>
    <string name="cancel">cancel</string>
    <string name="proceed_found_partner">Would you like to proceed with your relation ?</string>
    <string name="offer_gift">Offer gift</string>
    <string name="break_up">Break up</string>
    <string name="go_date">Go on a date</string>
    <string name="relation_status">Relation status</string>
    <string name="Propose_mariage">Propose mariage</string>
    <string name="watch_ad_find_partner">Watch ad and find partner instantly</string>
    <string name="offer_ring">Offer ring</string>
    <string name="bank_section_tuto">in bank section you can deposit your money and withdaw it and gain interest with time !</string>
    <string name="buying">Buying</string>
    <string name="buy_section_tuto">From this section you can buy things, Food, medicines, and other stuff like cars !, beware don\'t spend too much</string>
    <string name="learning_section_tuto">When the degree reaches the max, the player owns it</string>
    <string name="click_highschool_degree">click on Highschool degree to begin learning</string>
    <string name="save_image">would you like to save the image ?</string>
    <string name="picture_saved_success">Picture save Succesfully</string>
    <string name="save_pic_longclick">you cas save this picture by long clicking on it !</string>
    <string name="start_looking_partner">Start looking for a partner</string>
    <string name="stop_looking_partner">Stop looking for a partner</string>
    <string name="to_relation">to Relation</string>
    <string name="do_u_want_breakup">Do you really want to break up with</string>
    <string name="yes">yes</string>
    <string name="too_much_dates">You\'ve gone in too much dates lately</string>
    <string name="this_date_costs">this date will cost you</string>
    <string name="continue_n">continue ?</string>
    <string name="dating">Dating</string>
    <string name="dating_message_tuto">when you press the button the player will start looking for a partner, after a brief a period of time you will meet someone !</string>
    <string name="met_someone">Congratulations you\'ve met</string>
    <string name="click_offer_gift">click here to offer gift you\'ve bought to your new Girlfriend !</string>
    <string name="click_go_date">Click here to go on date with your new partner</string>
    <string name="sleeping">Sleeping</string>
    <string name="sleep_tuto_message">Sleeping helps regain energy to continue work and earn money !, use this bar to specify the hours you want to sleep</string>
    <string name="first_time">First time</string>
    <string name="work_tuto_message">Every job requires a degree and a level to be available</string>
    <string name="click_work_worker">click on \'Worker\' to obtain your first job as a worker</string>
    <string name="owned_yes">Owned : yes</string>
    <string name="owned_no">Owned  : no</string>
    <string name="to_relationship">to relationship</string>
    <string name="own">Own</string>
    <string name="allow_buy_car">Allows you to buy cars</string>
    <string name="instant_100">instant 100$</string>
    <string name="required_level">Required level</string>
    <string name="learn_time">Learn Time : 1 Hour</string>
    <string name="house_benefice">Allows you to buy furnitures</string>

    <string name="achievement_first_one" translatable="false">CgkI0cfuxPwUEAIQAg</string>
    <!-- achievement second one ! -->
    <string name="achievement_second_one" translatable="false">CgkI0cfuxPwUEAIQAw</string>

    <!-- achievement Blazer lazer -->
    <string name="achievement_blazer_lazer" translatable="false">CgkI0cfuxPwUEAIQBA</string>

    <!-- leaderboard Score -->
    <string name="leaderboard_score" translatable="false">CgkI0cfuxPwUEAIQAQ</string>
</resources>
