<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.android.testsharedpreferences.MainMenu">

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/GameTitle"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold" />

    <Button
        android:id="@+id/newgame"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/buttonNewGame"
        android:textStyle="bold" />

    <Button
        android:id="@+id/loadgame"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/buttonLoadGame"
        android:textStyle="bold" />

    <Button
        android:id="@+id/settings"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/buttonSettings"
        android:textStyle="bold" />

    <Button
        android:id="@+id/credits"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/credit"
        android:textStyle="bold" />
</LinearLayout>
