<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bankFragment"
    android:layout_width="500dp"
    android:layout_height="200dp"
    tools:context="fragments.BankFragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/opTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="143dp"
            android:layout_marginStart="144dp"
            android:layout_marginTop="16dp"
            android:fontFamily="casual"
            android:text="@string/bankOpt"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/depositOpt"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:layout_marginStart="120dp"
            android:fontFamily="casual"
            android:text="@string/deposit"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/withdrawOpt"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:layout_marginStart="60dp"
            android:fontFamily="casual"
            android:text="@string/withdraw"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/depositOpt" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
