<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.WithdrawFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/depositTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="casual"
            android:text="@string/bankTitleD"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <SeekBar
                android:id="@+id/seekBarDeposit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />

            <TextView
                android:id="@+id/seekbarMuchD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekBarDeposit"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="casual"
                android:text="0$"
                android:textAlignment="viewEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorAccent"
                android:textSize="10sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <Button
            android:id="@+id/deposit"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deposit"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/bankBalanceD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="casual"
            android:text="Balance :100$"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="casual"
            android:text="@string/intersetText"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>
</FrameLayout>
