<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="400dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/SlotnewGameTitle"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:textStyle="bold|italic" />


    <RelativeLayout
        android:id="@+id/slotId1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rect">

        <ImageView
            android:id="@+id/slotImage1"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/ic_empty" />

        <TextView
            android:id="@+id/slotTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/slotDate1"
            android:layout_toEndOf="@id/slotImage1"
            android:fontFamily="casual"
            android:text="@string/none"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/slotDate1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/slotImage1"
            android:fontFamily="casual"
            android:text="@string/slotDate1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/slotId2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rect">

        <ImageView
            android:id="@+id/slotImage2"
            android:layout_width="100dp"
            android:layout_height="90dp"
            app:srcCompat="@drawable/ic_empty" />

        <TextView
            android:id="@+id/slotTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/slotDate2"
            android:layout_toEndOf="@id/slotImage2"
            android:fontFamily="casual"
            android:text="@string/none"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/slotDate2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="9dp"
            android:layout_toEndOf="@+id/slotImage2"
            android:fontFamily="casual"
            android:text="@string/slotDate2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold" />


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/slotId3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rect">

        <ImageView
            android:id="@+id/slotImage3"
            android:layout_width="100dp"
            android:layout_height="90dp"
            app:srcCompat="@drawable/ic_empty" />

        <TextView
            android:id="@+id/slotTitle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/slotDate3"
            android:layout_toEndOf="@id/slotImage3"
            android:fontFamily="casual"
            android:text="@string/none"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/slotDate3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="9dp"
            android:layout_toEndOf="@+id/slotImage3"
            android:fontFamily="casual"
            android:text="@string/slotDate1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold" />


    </RelativeLayout>


</LinearLayout>